# ChatWaifu

./: README.md  pyproject.toml
others/: pipeline.drawio
research/text/models/: vanilla.py
